Add 'extra-packages' action input, update README
The 'extra-packages' parameter installs more conda, apt-get or brew
packages before cmake build.

In conda build replace CMAKE_PREFIX_PATH with CMAKE_FIND_ROOT_PATH. This
prevents the Windows preinstalled OpenSSL version "1.1.1t" to be
selected incorrectly instead of the one from CONDA_PREFIX.

--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -36,6 +36,10 @@ on:
         options:
         - true
         - false
+      extra-packages:
+        description: "Install extra packages (conda, apt or brew)"
+        default: ""
+        required: false
 
 jobs:
   build:
@@ -56,6 +60,7 @@ jobs:
         gdal-version: ${{ github.event.inputs.gdal-version }}
         rebuild-cache: ${{ github.event.inputs.rebuild-cache }}
         use-conda: ${{ github.event.inputs.use-conda }}
+        extra-packages: ${{ github.event.inputs.extra-packages }}
 
     # Keep the wheel as an artifact even in case of failure, to allow investigation
     - name: Select artifact name
