Fix GDAL 3.6.x under Windows, etc.
Workaround the "pip wheel" failure under Windows, by copying GIS SDK
"gdal_i.lib" to "gdal.lib" (seems to be renamed in the wheel setup).
Use 3.6.3 as the default GDAL version.
Take the GIS SDK PROJ9 pyproj database, instead of PROJ7.
Drop some old HACKs. The macOS validation runs on Python 3.10, as the
3.11 build fails:
  Library not loaded: '@rpath/libgdal.32.dylib

--- a/action.yml
+++ b/action.yml
@@ -13,7 +13,7 @@ inputs:
     type: boolean
   gdal-version:
     description: "Version of GDAL to setup (OSGeo/gdal repository reference)"
-    default: "v3.5.0"
+    default: "v3.6.3"
     required: false
     type: string
   cache-key-prefix:
@@ -108,6 +108,7 @@ runs:
     shell: pwsh
     run: |
       # See: https://github.com/OSGeo/gdal/blob/1d1b02a/.github/workflows/cmake_builds.yml#L54-L63
+      sudo apt-get update
       if ('${{ steps.wheel-cache.outputs.cache-hit }}' -ne 'true') {
         # Complete set of packages, mandatory if building wheel
         sudo apt-get install -y -q `
@@ -148,11 +149,6 @@ runs:
       brew install postgis
       # gdal is automatically installed as a dependency for postgis
       brew uninstall --ignore-dependencies gdal
-
-      #HACK: Build GDAL<3.6 under macOS-11, avoid:
-      # "error: functions that differ only in their return type cannot be overloaded"
-      # See https://github.com/apache/arrow/blob/9af43f1/cpp/src/arrow/util/aligned_storage.h#L39
-      brew uninstall --ignore-dependencies apache-arrow
 
   - name: Build GDAL and wheel (CMake)
     if: ${{ steps.download-sdk.outputs.sdk-dir == '' && steps.wheel-cache.outputs.cache-hit != 'true' }}
@@ -201,6 +197,11 @@ runs:
       $env:LIB="$SDK_BASE/lib"
       echo "LIB set to $env:LIB"
 
+      if (! $(Test-Path "$env:LIB/gdal.lib")) {
+        echo "HACK: Copy gdal_i.lib to gdal.lib (GDAL 3.6.x needs gdal.lib, but GIS SDK includes gdal_i.lib)"
+        Copy-Item -EA Continue "$env:LIB/gdal_i.lib" "$env:LIB/gdal.lib"
+      }
+
       python -m pip wheel gdal==${{ inputs.gdal-version }} --wheel-dir ${{ inputs.base-dir }}
 
   - name: Locate GDAL wheel
@@ -245,8 +246,8 @@ runs:
         Move-Item $OSGEO_UTILS_DIR\plugins\gdal_GEOR.dll,$OSGEO_UTILS_DIR\plugins\ogr_OCI.dll `
             $OSGEO_UTILS_DIR\plugins-optional -EA SilentlyContinue
 
-        echo "Copy all PROJ7 files to $OSGEO_UTILS_DIR\proj"
-        Copy-Item -Recurse "$GDAL_BIN/proj7/share" "$OSGEO_UTILS_DIR\proj"
+        echo "Copy all PROJ9 files to $OSGEO_UTILS_DIR\proj"
+        Copy-Item -Recurse "$GDAL_BIN/proj9/share" "$OSGEO_UTILS_DIR\proj"
 
         echo "Copy all GDAL programs to $OSGEO_UTILS_DIR\apps"
         Copy-Item "$GDAL_BIN/gdal/apps/*" "$OSGEO_UTILS_DIR\apps"
