--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -9,12 +9,13 @@ jobs:
   rebuid-cache:
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest, macos-latest]
-        python-version: ['3.10', '3.7']
-        gdal-version: ['v3.5.3']
-        exclude:
+        os: [windows-latest, ubuntu-latest]
+        python-version: ['3.11', '3.7']
+        gdal-version: ['v3.6.3']
+        include:
           - os: macos-latest    # Simplify tests under macOS
-            python-version: '3.7'
+            python-version: '3.10'
+            gdal-version: 'v3.6.3'
       fail-fast: false
 
     runs-on: ${{ matrix.os }}
@@ -32,8 +33,6 @@ jobs:
       with:
         gdal-version: "${{ matrix.gdal-version }}"
         rebuild-cache: true
-        #HACK: Build GDAL<3.6 under ubuntu-22.04 (GNU 11.3.0), see https://github.com/OSGeo/gdal/pull/6600
-        CMAKE_OPTIONS: "-DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS=-U_FORTIFY_SOURCE"
 
     - name: Check the package
       shell: pwsh
@@ -45,12 +44,13 @@ jobs:
     timeout-minutes: 10   # The cache makes it much faster, but not under macOS
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest, macos-latest]
-        python-version: ['3.10']
-        gdal-version: ['v3.5.3']
-        exclude:
+        os: [windows-latest, ubuntu-latest]
+        python-version: ['3.11']
+        gdal-version: ['v3.6.3']
+        include:
           - os: macos-latest      # Simplify tests under macOS
-            python-version: '3.7'
+            python-version: '3.10'
+            gdal-version: 'v3.6.3'
       fail-fast: false
 
     runs-on: ${{ matrix.os }}
